<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.brandeis.cs.lapps</groupId>
    <artifactId>stanfordnlp-web-service</artifactId>
    <version>2.2.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Brandeis LAPPS Web Services wrapping Stanford CoreNLP tools</name>
    <description>
        Publish API for the LAPPS exchange data structure (LEDS), the thing that will be serialized to from JSON-LD.
        Provide converter for the Standford one-per-line format to LEDS.
    </description>
    <parent>
        <groupId>org.lappsgrid.maven</groupId>
        <artifactId>war-parent-pom</artifactId>
        <version>2.0.5</version>
    </parent>


    <properties>
        <lapps.all>2.3.3</lapps.all>
        <stanford.version>3.3.1</stanford.version>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>the Maven central repository</id>
            <url>http://repo.maven.apache.org/maven2/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <!-- this should really be inherited from org.lappsgrid.all pom, but it's not at the moment -->
        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>serialization</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>all</artifactId>
            <version>${lapps.all}</version>
        </dependency>
        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>${stanford.version}</version>
        </dependency>
        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-corenlp</artifactId>
            <version>${stanford.version}</version>
            <classifier>models</classifier>
        </dependency>
        <dependency>
            <groupId>edu.stanford.nlp</groupId>
            <artifactId>stanford-parser</artifactId>
            <version>${stanford.version}</version>
        </dependency>
    </dependencies>

    <build>

        <finalName>stanfordnlp-web-service#${project.version}</finalName>

        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass/>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <annotationProcessors>
                        <annotationProcessor>
                            org.lappsgrid.annotation.processing.MetadataProcessor
                        </annotationProcessor>
                    </annotationProcessors>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>re-process-resources</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>resources</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>


            <plugin>
                <!-- Hit out-of-memory during test with the default options -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <configuration>
                    <argLine>-Xms512m -Xmx2496m -XX:MaxPermSize=128m</argLine>
                </configuration>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>version.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>**</include>
                </includes>
            </resource>
        </resources>

    </build>

</project>
